# Stocksafari

./: .gitignore  CMakeLists.txt  README.md
examples/: demo.cpp
extra/: stocksafari_fastapi.py  stocksafari_pybind.cpp
include/stocksafari/: Account.hpp  AccountStock.hpp  Controller.hpp  PortfolioEntry.hpp  PortfolioEntryDetail.hpp  Stock.hpp  StockValue.hpp
ng-stocksafari-ui/: README.md  angular.json  package-lock.json  package.json
ng-stocksafari-ui/src/: index.html
ng-stocksafari-ui/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
ng-stocksafari-ui/src/app/portfolio/: portfolio.component.html  portfolio.component.ts
ng-stocksafari-ui/src/app/shared/guards/: auth.guard.ts
ng-stocksafari-ui/src/app/shared/models/: account.model.ts  chart-options.model.ts  portfolio-entry-detail.model.ts  portfolio-entry.model.ts  stock.model.ts
ng-stocksafari-ui/src/app/shared/services/: data.service.ts
ng-stocksafari-ui/src/app/stocks/: stocks.component.html  stocks.component.scss  stocks.component.ts
ng-stocksafari-ui/src/app/stocks/stock-detail/: stock-detail.component.html  stock-detail.component.ts
ng-stocksafari-ui/src/app/stocks/stock-detail/stock-detail-chart/: stock-detail-chart.component.html  stock-detail-chart.component.ts
qt-stocksafari-ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: Controller.cpp  PortfolioEntry.cpp  Stock.cpp
stocksafari-ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
tests/: testController.cpp
